deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: no-as-a-service
    app.openshift.io/runtime: nodejs
  name: no-as-a-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: no-as-a-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: no-as-a-service
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: no-as-a-service
              weight: 100
      containers:
      - image: quay.io/jaeichle/no-as-a-service:latest@sha256:f210a0660361641e33cf22da5c9fb97bbfcfecd8decb1ee1ba3dacf5c5bab481
        imagePullPolicy: IfNotPresent
        name: naas
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "64Mi"
            cpu: "25m"
          limits:
            memory: "256Mi"
            cpu: "100m"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccountName: naas
      serviceAccount: naas
      terminationGracePeriodSeconds: 30
