deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: no-as-a-service
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: no-as-a-service
